# stably

./: .eslint.config.js  .gitignore  .prettierrc  AGENTS.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml
AGENTS/: CODEGEN.md  DEPS.md  ESCALATION.md  PR.CREATE.md  PR.REVIEW.md  ROOT.md  SCOPE.md  SECURITY.md
examples/chatbot/: package.json
memory/: agent-memory.yaml  agent-metrics.yaml  glossary.md  memory.yaml  metrics.yaml  preferences.md  project-context.md
memory/prompts/: README.md
memory/prompts/scaffolds/: agent.md  executor.md  interpreter.md  planner.md  summarizer.md
python/stably-mcp/: README.md  pyproject.toml  pyrightconfig.json
python/stably-mcp/src/stably_mcp/: __init__.py  server.py  session.py
python/stably-mcp/tests/: test_server_tools.py  test_session.py
python/stably-py/: README.md  pyproject.toml
python/stably-py/src/stably/: __init__.py  core.py  errors.py  types.py  validation.py
python/stably-py/tests/: test_core.py  test_validation.py
test/polyfills/: node-crypto-polyfill.mjs  node-events-loader.mjs  node-events-polyfill.mjs
