[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stably-mcp"
version = "0.1.0"
description = "Stably is a pure, deterministic pipeline substrate for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tony M." }]
dependencies = [
    "mcp>=0.1.0",
    "stably-py @ git+https://github.com/tonym/stably.git@feature/stably-mcp#subdirectory=python/stably-py"
]

[project.urls]
Homepage = "https://github.com/tonym/stably"
Source = "https://github.com/tonym/stably"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]



