[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stably-core"
version = "0.1.0"
description = "Stably is a pure, deterministic pipeline substrate for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Tony M." }
]

[project.urls]
Homepage = "https://github.com/tonym/stably"
Source = "https://github.com/tonym/stably"
