[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stably-py"
version = "0.1.0"
description = "Stably is a pure, deterministic pipeline substrate for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tony M." }]
keywords = [
"pipeline",
"deterministic",
"functional",
"validation",
"contracts",
"generator",
"pure",
]

classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",

"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",

"Topic :: Software Development",
"Topic :: Software Development :: Libraries",
"Topic :: Software Development :: Libraries :: Python Modules",

"Operating System :: OS Independent",

]

[project.urls]
Homepage = "https://github.com/tonym/stably"
Source = "https://github.com/tonym/stably"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

